2009-01-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_tab),
	(murrine_draw_radiobutton), (murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_tab), (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):
	Automatically reduce lightborder_shade for widgets in disabled state:
	button, radio and check, tab.
	Fixed reliefstyle = 0 in radio and check.
	Feedback is always welcome, if you prefer before the lightborder_shade
	tweak.

2009-01-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_scale_draw_gradient):
	* src/murrine_draw_rgba.c (murrine_scale_draw_gradient):
	Fixed a misalignment of the scale's hightlight.

2009-01-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider),
	(murrine_draw_radiobutton), (murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider),
	(murrine_rgba_draw_radiobutton), (murrine_rgba_draw_checkbox):
	Fixed rounded scrollbars's corners.
	Various changes in cairo operators in rgba mode, I hope
	that everything renders correctly as before, I can't test it now.

2009-01-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_progressbar_fill):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
	Fixed rounded progressbars's corners.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/animation.c:
	* src/animation.h:
	* src/cairo-support.c:
	* src/cairo-support.h:
	* src/murrine_draw.c:
	* src/murrine_draw.h:
	* src/murrine_draw_rgba.c:
	* src/murrine_rc_style.c:
	* src/murrine_rc_style.h:
	* src/murrine_style.c:
	* src/murrine_style.h:
	* src/murrine_theme_main.c:
	* src/murrine_types.h:
	* src/support.c: