@@ -1,5 +1,10 @@
 2009-01-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_style.c (murrine_style_draw_shadow):
+	Clamp workspace switcher's roundness to 3.
+
+2009-01-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_tab),
 	(murrine_draw_radiobutton), (murrine_draw_checkbox):
 	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
